Thu Nov 29 16:14:41 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c (rb_debug_inspector_open): use RARRAY_LENINT() for
	  int variable.

Thu Nov 29 15:59:55 2012  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/debug.h: add rb_debug_inspector_* APIs.

	* vm_backtrace.c: ditto.

	* common.mk: add dpendency from vm_backtrace.o to
	  include/ruby/debug.h.

	* proc.c (rb_binding_new_with_cfp): constify.

	* vm.c (rb_vm_get_ruby_level_next_cfp): consitify.

	* vm_core.h, vm_trace.c: move decls.

Thu Nov 29 15:56:14 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rdoc/test_case.rb (RDoc::TestCase#verbose_capture_io):
	  defined for asserts of warnings.

	* test/rdoc: use verbose_capture_io on asserts of warnings.
	  they failed when tests was run with RUBYOPT=-W0.

Thu Nov 29 15:53:38 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/psych/extconf.rb: added --enable-bundled-libyaml option.  this
	  enforces using bundled libyaml.

Thu Nov 29 15:51:54 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems*:  Updated to RubyGems 2.0
	* test/rubygems*:  ditto.

	* common.mk (prelude):  Updated for RubyGems 2.0 source rearrangement.

	* tool/change_maker.rb:  Allow invalid UTF-8 characters in source
	  files.

Thu Nov 29 15:38:14 2012  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/debug.h: provide rb_tracearg_*() APIs,
	  instead of rb_tracepoint_attr_*().
	  These APIs are for debuggers/profilers.
	  They will be explained in another docs somtime.

	* vm_trace.c: ditto.

Thu Nov 29 15:10:45 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/minitest/test_minitest_unit.rb: restore orig_verbose only
	  if it is set. This broke rdoc's tests.
	  http://u64.rubyci.org/~chkbuild/ruby-trunk/log/20121129T050102Z.diff.html.gz

Thu Nov 29 14:56:30 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (rb_tracepoint_attr_method_id): 
	  rename TracePoint#id to TracePoint#method_id.

	* include/ruby/debug.h: ditto.

	* test/ruby/test_settracefunc.rb: ditto,
